--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
     "mongoose": "^6.7.2",
     "mongoose-unique-validator": "^3.1.0",
     "multer": "^1.4.5-lts.1",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "socket.io": "^4.5.4"
   }
 }
