--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "multer": "^1.4.5-lts.1",
     "ngx-material-timepicker": "^5.5.3",
     "rxjs": "~7.5.0",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
